Record Type/objects/Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Holder_s_Address__c</fullName>
        <label>Account Holder&apos;s Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Holder_s_Contact_Number__c</fullName>
        <description>Phone</description>
        <label>Account Holder&apos;s Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Holder_s_Email__c</fullName>
        <label>Account Holder&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Holder_s_Name__c</fullName>
        <label>Account Holder&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Savings General</fullName>
                </value>
                <value>
                    <fullName>Savings Minor</fullName>
                </value>
                <value>
                    <fullName>Savings Senior</fullName>
                </value>
                <value>
                    <fullName>Current General</fullName>
                </value>
                <value>
                    <fullName>Current Forex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Balance__c</fullName>
        <label>Initial Balance</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Registered_Date__c</fullName>
        <label>Registered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trading_Limit__c</fullName>
        <inlineHelpText>Demat or Current</inlineHelpText>
        <label>Trading Limit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Bank Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{000}</displayFormat>
        <label>Bank Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <recordTypes>
        <fullName>Employee_Record_Type</fullName>
        <active>true</active>
        <description>This Record Type is visible to the Employee and Manager Profile</description>
        <label>Employee Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manager_Record_Type</fullName>
        <active>true</active>
        <label>Manager Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>